    now be separated by spaces (as has always been documented).

- source: support xpdf-4 by default, or xpdf-3.04, or poppler-0.57.0
  and older, via #defines.
  Provide new files:
  pdftosrc-newpoppler.cc for poppler-0.59.0 upto poppler-0.70.1.
  pdftosrc-poppler0.71.0 for poppler-0.71.0.
  pdftosrc-poppler0.72.0 for poppler-0.72.0 upto poppler-0.75.0.
  pdftosrc-poppler0.76.0 for poppler-0.76.0 and newer. 
  pdftoepdf-poppler0.68.0.cc for poppler-0.59.0 upto poppler-0.68.0.
  pdftoepdf-poppler0.69.0.cc for poppler-0.69.0.
  pdftoepdf-poppler0.70.0.cc for poppler-0.70.0 and poppler-0.70.1.
  pdftoepdf-poppler0.71.0.cc for poppler-0.71.0.
  pdftoepdf-poppler0.72.0.cc for poppler-0.72.0 upto poppler-0.74.0.
  pdftoepdf-poppler0.75.0.cc for poppler-0.75.0.
  pdftoepdf-poppler0.76.0.cc for poppler-0.76.0 and newer.
  Note that pdftosrc-*.cc and pdftoepdf-*.cc should be
  renamed as pdftosrc.cc, and pdftoepdf.cc, respectively, before
  compilation.

---------------------------------------------------------------
pdfTeX 3.14159265-2.6-1.40.18 (TeX Live 2017)  (April 27, 2017)
- changes:
  - rename envvar SOURCE_DATE_EPOCH_TEX_PRIMITIVES to FORCE_SOURCE_DATE;
    no changes in functionality.
  - if the \pdfpageattr token list contains the string "/MediaBox",
    omitting output of the default /MediaBox.

- bugfixes:
  - \pdflastmatch more reliable when there was no match.

-------------------------------------------------------------
pdfTeX 3.14159265-2.6-1.40.17 (TeX Live 2016)  (May 20, 2016)
- changes:
  - if the environment variable SOURCE_DATE_EPOCH is set, use its value for
    the PDF CreationDate and ModDate values, and to seed the trailer /ID.
    This by itself should suffice to create reproducible PDFs.  The
    new primitives below support more granular output tweaks with the
    same intent.
  - if the environment variable SOURCE_DATE_EPOCH_TEX_PRIMITIVES is set
    to 1, the \year, \day, and \time primitives are also initialized